data/forge_javadoc/1.8.9/raw/net/minecraft/client/shader/ShaderUniform.md
---
title: "ShaderUniform"
description: "public class ShaderUniform extends java.lang.Object"
package: "net/minecraft/client/shader"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/client/shader/ShaderUniform.html"
sourceType: javadoc
---

# ShaderUniform

**Inheritance:** java.lang.Object → net.minecraft.client.shader.ShaderUniform

## Class signature

```java
public class ShaderUniform extends java.lang.Object
```

## Constructors

- `ShaderUniform(java.lang.String name, int type, int count, ShaderManager manager)`

## Methods

- `void func_148092_b(float p_148092_1_, float p_148092_2_, float p_148092_3_, float p_148092_4_)`
- `java.lang.String getShaderName()`
- `static int parseType(java.lang.String p_148085_0_)`
- `void set(float p_148090_1_)`
- `void set(float[] p_148097_1_)`
- `void set(float p_148087_1_, float p_148087_2_)`
- `void set(float p_148095_1_, float p_148095_2_, float p_148095_3_)`
- `void set(float p_148081_1_, float p_148081_2_, float p_148081_3_, float p_148081_4_)`
- `void set(float p_148094_1_, float p_148094_2_, float p_148094_3_, float p_148094_4_, float p_148094_5_, float p_148094_6_, float p_148094_7_, float p_148094_8_, float p_148094_9_, float p_148094_10_, float p_148094_11_, float p_148094_12_, float p_148094_13_, float p_148094_14_, float p_148094_15_, float p_148094_16_)`
- `void set(int p_148083_1_, int p_148083_2_, int p_148083_3_, int p_148083_4_)`
- `void set(Matrix4f p_148088_1_)`
- `void setUniformLocation(int p_148084_1_)`
- `void upload()`
